--- a/AutoRefresh.html
+++ b/AutoRefresh.html
@@ -2,7 +2,7 @@
 <html>
   <head></head>
   <body>
-    <iframe src="https://ai-tunes.glitch.me/" style="width:100%;height:100vh"></iframe>
+    <iframe src="http://site.com" style="width:100%;height:100vh"></iframe>
     <script>
     setTimeout("location.reload(true);", 3000);
     </script>
